<package format="2">
  <name>diag_lib</name>
  <version>1.0.0</version>
  <description>The diag_lib package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diag_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_export_depend>diag_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>diag_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
