<?xml version="1.0"?>
<package>
  <name>diag_msgs</name>
  <version>1.6.3</version>
  <description>The libdiag package</description>

  <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
  <license>BSD</license>
  <author email="yusuke.fujii@tier4.jp">Yusuke FUJII</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
